servicemesh/08_mtls-east-west/peerauthentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  namespace: training
  name: disable
spec:
  mtls:
    mode: PERMISSIVE
#    mode: DISABLE
