servicemesh/08_mtls-east-west/backend-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: training
  name: backend
spec:
  host: backend.training.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.0.0

# TODO remove quotes in host: sections, to have it consistant
