servicemesh/08_mtls-east-west/frontend-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: training
  name: frontend
spec:
  host: frontend.training.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: 1.0.0
